--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">My App Profile</string>
     <string name="action_settings">Settings</string>
     <string name="title">My NanoDegree Apps!</string>
+    <string name="capstoneButton">CAPSTONE: MY OWN APP</string>
+    <string name="xyzButton">XYZ READER</string>
+    <string name="buildBiggerButton">BUILD IT BIGGER</string>
+    <string name="libraryButton">LIBRARY APP</string>
+    <string name="scoresButton">SCORES APP</string>
+    <string name="spotifyButton">SPOTIFY STREAMER</string>
 </resources>
